homelab/apps/pihole/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: "pihole/pihole:latest"
        ports:
        - containerPort: 53
          protocol: UDP
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: pihole-storage
          mountPath: /etc/pihole
      volumes:
      - name: pihole-storage
        persistentVolumeClaim:
          claimName: pihole-pvc
