homelab/apps/pihole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-service
spec:
  selector:
    app: pihole
  type: LoadBalancer
  loadBalancerIP: 192.168.178.202
  ports:
    - name: dns
      protocol: UDP
      port: 53
      targetPort: 53
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
