homelab/apps/pihole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: pihole.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-service
                port:
                  number: 80
